# agent

./: .gitignore  Dockerfile  fullplan.md  pyproject.toml  reference.md
.cursor/plans/: hf-mt-175fcc57.plan.md  integration.plan.md  quran-context-f849a531.plan.md  sdk-load-test-script-1891a891.plan.md  speechm-62ac927a.plan.md
docs/: tts-prosody-continuity.md
jsons/: Quran.json  en.json
scripts/: local_test.py  local_test_rt.py  test_hf_endpoint.py  test_hf_streaming.py  test_tts_strip.py  transcription.py
src/: __init__.py  agent.py  retriever.py
