[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.2.0",
    "httpx>=0.28.1",
    "livekit>=1.0.19",
    "livekit-plugins-cartesia>=1.3.3",
    "livekit-agents[speechmatics,groq]~=1.2",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "speechmatics-rt>=0.5.1",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "pyaudio>=0.2.14",
]
